# HODLR

./: CMakeLists.txt
.github/workflows/: build.yml
docs/source/: conf.py
examples/: CMakeLists.txt  example.cpp  example_RPY.cpp  example_conducting_sphere_plate.cpp  example_lowrank_factorization.cpp  example_matern.cpp  tutorial.cpp
fortran/: CMakeLists.txt
include/: HODLR_Matrix.hpp
python/: CMakeLists.txt  setup.py
src/: HODLR_Node.cpp  LowRank.cpp
test/: CMakeLists.txt  test_HODLR.cpp
